--- a/website/site-static/sass/asite/_forms_extra.sass
+++ b/website/site-static/sass/asite/_forms_extra.sass
@@ -508,10 +508,13 @@ form.form-playlist
         height: 0
         // width: 423px
         
-    &.hover    
+    &.hover
+      background: transparent
+      a
+        // border: 5px solid red
       .row-fluid.playhead
         .waveform
-          // background-color: #ddffd9
+          background-color: #ddffd9
         .envelope
           opacity: 0.5
           border-bottom-color: #ddffd9
